# timemasterx

./: .gitignore  LICENCE  README.md  cli.py  pyproject.toml  setup.py
tests/: test_core.py
timemasterx/: core.py  duration.py  scheduler.py  timezone.py
